--- a/index.html
+++ b/index.html
@@ -166,8 +166,11 @@
     }
 
     // Data laden
-    fetch('data.json')
-      .then(response => response.json())
+    fetch('data.json?nocache=' + Date.now())
+      .then(response => {
+        if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
+        return response.json();
+      })
       .then(data => {
         const reparaties = data.bonnen || [];
         const serviceData = data.service || [];
