--- a/index.html
+++ b/index.html
@@ -54,51 +54,36 @@
       width: 250px;
       max-width: 100%;
     }
-    .status {
-      font-weight: bold;
-    }
-    .status.green { color: green; }
-    .status.orange { color: orange; }
-    .status.red { color: red; }
+    .status.green { color: green; font-weight: bold; }
+    .status.orange { color: orange; font-weight: bold; }
+    .status.red { color: red; font-weight: bold; }
 
     @media (max-width: 600px) {
-      table, th, td {
-        font-size: 0.85rem;
-      }
-      .tab-button {
-        margin-bottom: 0.5rem;
-      }
+      table, th, td { font-size: 0.85rem; }
+      .tab-button { margin-bottom: 0.5rem; }
     }
   </style>
 </head>
 <body>
   <h1>Auto-onderhoud overzicht</h1>
 
-  <!-- Tabs -->
   <div>
     <button class="tab-button active" data-tab="reparaties">Reparaties</button>
     <button class="tab-button" data-tab="service">Serviceboekje</button>
   </div>
 
-  <!-- Zoekfunctie voor reparaties -->
   <div class="search-box" id="searchContainer">
     <label for="searchInput">Zoeken in reparaties:</label>
     <input type="text" id="searchInput" placeholder="Bijv. airco, remmen, banden..." />
   </div>
 
-  <!-- Reparaties tabel -->
   <table id="reparaties">
     <thead>
-      <tr>
-        <th>Datum</th>
-        <th>Garage</th>
-        <th>Totaalbedrag</th>
-      </tr>
+      <tr><th>Datum</th><th>Garage</th><th>Totaalbedrag</th></tr>
     </thead>
     <tbody></tbody>
   </table>
 
-  <!-- Serviceboekje -->
   <div id="serviceContainer" style="display:none;">
     <label for="serviceFilter">Filter servicebeurten:</label>
     <select id="serviceFilter">
@@ -129,12 +114,10 @@
     const serviceContainer = document.getElementById('serviceContainer');
     const searchContainer = document.getElementById('searchContainer');
 
-    // Wisselen tussen tabs
     tabs.forEach(tab => {
       tab.addEventListener('click', () => {
         tabs.forEach(t => t.classList.remove('active'));
         tab.classList.add('active');
-
         if (tab.dataset.tab === 'reparaties') {
           reparatiesTable.style.display = '';
           searchContainer.style.display = '';
@@ -147,114 +130,81 @@
       });
     });
 
-    // Status bepalen
     function bepaalStatus(beurtDatum, beurtKm, huidigeKm) {
       const vandaag = new Date();
       const datumVerschil = (new Date(beurtDatum) - vandaag) / (1000 * 60 * 60 * 24);
       const kmVerschil = beurtKm - huidigeKm;
-
-      if (datumVerschil < 0 && beurtKm <= huidigeKm)
-        return { label: "✅ Uitgevoerd", kleur: "green" };
-
-      if (datumVerschil < 60 || kmVerschil < 5000)
-        return { label: "⏳ Binnenkort", kleur: "orange" };
-
-      if (datumVerschil < 0 && beurtKm > huidigeKm)
-        return { label: "⚠️ Te laat", kleur: "red" };
-
+      if (datumVerschil < 0 && beurtKm <= huidigeKm) return { label: "✅ Uitgevoerd", kleur: "green" };
+      if (datumVerschil < 60 || kmVerschil < 5000) return { label: "⏳ Binnenkort", kleur: "orange" };
+      if (datumVerschil < 0 && beurtKm > huidigeKm) return { label: "⚠️ Te laat", kleur: "red" };
       return { label: "✅ Oké", kleur: "green" };
     }
 
-    // Data laden
     fetch('data.json?nocache=' + Date.now())
-      .then(response => {
-        if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
-        return response.json();
-      })
+      .then(r => r.json())
       .then(data => {
+        const huidigeKm = 366000;
         const reparaties = data.bonnen || [];
         const serviceData = data.service || [];
-        const huidigeKm = 366000;
 
-        // Reparaties vullen
-        const reparatieTbody = document.querySelector('#reparaties tbody');
+        const repBody = document.querySelector('#reparaties tbody');
         function renderReparaties(filter = '') {
-          reparatieTbody.innerHTML = '';
-          reparaties
-            .filter(f => f.omschrijving.toLowerCase().includes(filter.toLowerCase()))
-            .forEach((factuur, index) => {
-              const mainRow = document.createElement('tr');
-              mainRow.style.cursor = 'pointer';
-              mainRow.innerHTML = `
-                <td>${factuur.factuurdatum || '-'}</td>
-                <td>${factuur.garage || '-'}</td>
-                <td>€ ${factuur.totaal ? factuur.totaal.toFixed(2) : '-'}</td>
-              `;
-              reparatieTbody.appendChild(mainRow);
-
-              const detailRows = [];
+          repBody.innerHTML = '';
+          reparaties.filter(r => r.omschrijving.toLowerCase().includes(filter.toLowerCase()))
+            .forEach((f, i) => {
+              const row = document.createElement('tr');
+              row.style.cursor = 'pointer';
+              row.innerHTML = `<td>${f.factuurdatum}</td><td>${f.garage}</td><td>€ ${f.totaal.toFixed(2)}</td>`;
+              repBody.appendChild(row);
               const details = [
-                {label: "Factuurnummer", value: factuur.factuurnummer},
-                {label: "Kilometerstand", value: factuur.kilometerstand},
-                {label: "Omschrijving", value: factuur.omschrijving},
-                {label: "Categorie", value: factuur.categorie}
+                `Factuurnummer: ${f.factuurnummer}`,
+                `Kilometerstand: ${f.kilometerstand}`,
+                `Omschrijving: ${f.omschrijving}`,
+                `Categorie: ${f.categorie}`
               ];
               details.forEach(d => {
-                const row = document.createElement('tr');
-                row.style.display = 'none';
-                row.innerHTML = `<td colspan="3" style="padding-left: 1.5rem;">${d.label}: ${d.value || '-'}</td>`;
-                reparatieTbody.appendChild(row);
-                detailRows.push(row);
-              });
-              mainRow.addEventListener('click', () => {
-                detailRows.forEach(r => {
+                const r = document.createElement('tr');
+                r.style.display = 'none';
+                r.innerHTML = `<td colspan="3" style="padding-left:1.5rem;">${d}</td>`;
+                repBody.appendChild(r);
+                row.addEventListener('click', () => {
                   r.style.display = r.style.display === 'none' ? 'table-row' : 'none';
                 });
               });
             });
         }
         renderReparaties();
+        document.getElementById('searchInput').addEventListener('input', e => renderReparaties(e.target.value));
 
-        document.getElementById('searchInput').addEventListener('input', e => {
-          renderReparaties(e.target.value);
-        });
-
-        // Serviceboekje vullen
-        const serviceTbody = document.querySelector('#service tbody');
-        const serviceFilter = document.getElementById('serviceFilter');
-
+        const servBody = document.querySelector('#service tbody');
+        const servFilter = document.getElementById('serviceFilter');
         function renderService() {
-          serviceTbody.innerHTML = '';
-          const filter = serviceFilter.value;
+          servBody.innerHTML = '';
+          const filter = servFilter.value;
           const vandaag = new Date();
-
-          serviceData.forEach(beurt => {
-            const beurtDatum = new Date(beurt.datum);
-            const status = bepaalStatus(beurt.datum, beurt.kilometerstand, huidigeKm);
-            const isHistorisch = beurtDatum < vandaag;
-            const isToekomstig = beurtDatum > vandaag;
-
-            if (filter === 'historisch' && !isHistorisch) return;
-            if (filter === 'toekomstig' && !isToekomstig) return;
-
+          serviceData.forEach(b => {
+            const d = new Date(b.datum);
+            const isHist = d < vandaag;
+            const isToek = d > vandaag;
+            if (filter === 'historisch' && !isHist) return;
+            if (filter === 'toekomstig' && !isToek) return;
+            const status = bepaalStatus(b.datum, b.kilometerstand, huidigeKm);
             const row = document.createElement('tr');
             row.innerHTML = `
-              <td>${beurt.datum}</td>
-              <td>${beurt.garage}</td>
-              <td>${beurt.type_beurt}</td>
-              <td>${beurt.soort_onderhoud}</td>
-              <td>${beurt.kilometerstand.toLocaleString()} km</td>
-              <td>${beurt.volgende_interval}</td>
-              <td class="status ${status.kleur}">${status.label}</td>
-            `;
-            serviceTbody.appendChild(row);
+              <td>${b.datum}</td>
+              <td>${b.garage}</td>
+              <td>${b.type_beurt}</td>
+              <td>${b.soort_onderhoud}</td>
+              <td>${b.kilometerstand.toLocaleString()} km</td>
+              <td>${b.volgende_interval}</td>
+              <td class="status ${status.kleur}">${status.label}</td>`;
+            servBody.appendChild(row);
           });
         }
-
-        serviceFilter.addEventListener('change', renderService);
+        servFilter.addEventListener('change', renderService);
         renderService();
       })
-      .catch(err => console.error("Fout bij laden data.json:", err));
+      .catch(e => console.error('Fout bij laden JSON:', e));
   </script>
 </body>
 </html>
