--- a/index.html
+++ b/index.html
@@ -5,11 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wrenchly – Auto-onderhoud</title>
   <style>
+    :root {
+      --bg-color: #fafafa;
+      --text-color: #222;
+      --table-bg: #fff;
+      --border-color: #ddd;
+      --header-bg: #eee;
+      --hover-bg: #f5f9ff;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --bg-color: #1c1c1e;
+        --text-color: #f5f5f7;
+        --table-bg: #2c2c2e;
+        --border-color: #3a3a3c;
+        --header-bg: #333;
+        --hover-bg: #383838;
+      }
+    }
+
     body {
       font-family: system-ui, sans-serif;
       margin: 1.5rem;
-      background: #fafafa;
-      color: #222;
+      background: var(--bg-color);
+      color: var(--text-color);
+      transition: background 0.3s ease, color 0.3s ease;
     }
     h1 {
       margin-bottom: 1rem;
@@ -19,33 +40,39 @@
       border-collapse: collapse;
       margin-top: 1rem;
       font-size: 0.95rem;
+      background: var(--table-bg);
+      border-radius: 8px;
+      overflow: hidden;
     }
     th, td {
-      border-bottom: 1px solid #ddd;
-      padding: 0.5rem;
+      border-bottom: 1px solid var(--border-color);
+      padding: 0.6rem;
       text-align: left;
       vertical-align: top;
     }
     th {
-      background: #eee;
+      background: var(--header-bg);
       font-weight: 600;
     }
     tr:hover {
-      background-color: #f5f9ff;
+      background-color: var(--hover-bg);
     }
+
     .tab-button {
       margin-right: 1rem;
-      padding: 0.4rem 0.9rem;
+      padding: 0.45rem 1rem;
       cursor: pointer;
-      border: 1px solid #ccc;
-      background-color: #fff;
+      border: 1px solid var(--border-color);
+      background-color: var(--table-bg);
       border-radius: 6px;
-      transition: background 0.2s;
+      transition: all 0.2s;
+      color: var(--text-color);
     }
     .tab-button.active {
-      background-color: #ddd;
+      background-color: var(--header-bg);
       font-weight: bold;
     }
+
     .search-box {
       margin: 0.8rem 0;
     }
@@ -53,14 +80,19 @@
       padding: 0.4rem 0.6rem;
       width: 250px;
       max-width: 100%;
+      border: 1px solid var(--border-color);
+      border-radius: 4px;
+      background-color: var(--table-bg);
+      color: var(--text-color);
     }
-    .status.green { color: green; font-weight: bold; }
-    .status.orange { color: orange; font-weight: bold; }
-    .status.red { color: red; font-weight: bold; }
+
+    .status.green { color: #4caf50; font-weight: bold; }
+    .status.orange { color: #ff9800; font-weight: bold; }
+    .status.red { color: #f44336; font-weight: bold; }
 
     @media (max-width: 600px) {
       table, th, td { font-size: 0.85rem; }
-      .tab-button { margin-bottom: 0.5rem; }
+      .tab-button { margin-bottom: 0.5rem; display: inline-block; }
     }
   </style>
 </head>
