--- a/index.html
+++ b/index.html
@@ -2,39 +2,48 @@
 <html lang="nl">
 <head>
   <meta charset="UTF-8" />
+  <meta name="color-scheme" content="light dark" />
+  <meta name="supported-color-schemes" content="light dark" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wrenchly – Auto-onderhoud</title>
   <style>
+    /* ====== Kleurvariabelen ====== */
     :root {
       --bg-color: #fafafa;
       --text-color: #222;
-      --table-bg: #fff;
+      --table-bg: #ffffff;
       --border-color: #ddd;
       --header-bg: #eee;
       --hover-bg: #f5f9ff;
+      --accent: #18ff83;
     }
 
+    /* ====== DARK MODE ====== */
     @media (prefers-color-scheme: dark) {
       :root {
-        --bg-color: #1c1c1e;
+        --bg-color: #121212;
         --text-color: #f5f5f7;
-        --table-bg: #2c2c2e;
-        --border-color: #3a3a3c;
-        --header-bg: #333;
-        --hover-bg: #383838;
+        --table-bg: #1e1e1e;
+        --border-color: #333;
+        --header-bg: #2a2a2a;
+        --hover-bg: #2f2f2f;
+        --accent: #18ff83;
       }
     }
 
+    /* ====== Basisopmaak ====== */
     body {
-      font-family: system-ui, sans-serif;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
       margin: 1.5rem;
       background: var(--bg-color);
       color: var(--text-color);
       transition: background 0.3s ease, color 0.3s ease;
     }
+
     h1 {
       margin-bottom: 1rem;
     }
+
     table {
       width: 100%;
       border-collapse: collapse;
@@ -44,16 +53,19 @@
       border-radius: 8px;
       overflow: hidden;
     }
+
     th, td {
       border-bottom: 1px solid var(--border-color);
       padding: 0.6rem;
       text-align: left;
       vertical-align: top;
     }
+
     th {
       background: var(--header-bg);
       font-weight: 600;
     }
+
     tr:hover {
       background-color: var(--hover-bg);
     }
@@ -68,14 +80,17 @@
       transition: all 0.2s;
       color: var(--text-color);
     }
+
     .tab-button.active {
-      background-color: var(--header-bg);
+      background-color: var(--accent);
+      color: #000;
       font-weight: bold;
     }
 
     .search-box {
       margin: 0.8rem 0;
     }
+
     .search-box input {
       padding: 0.4rem 0.6rem;
       width: 250px;
@@ -146,6 +161,7 @@
     const serviceContainer = document.getElementById('serviceContainer');
     const searchContainer = document.getElementById('searchContainer');
 
+    // Wisselen tussen tabs
     tabs.forEach(tab => {
       tab.addEventListener('click', () => {
         tabs.forEach(t => t.classList.remove('active'));
@@ -162,6 +178,7 @@
       });
     });
 
+    // Bepaal onderhoudsstatus
     function bepaalStatus(beurtDatum, beurtKm, huidigeKm) {
       const vandaag = new Date();
       const datumVerschil = (new Date(beurtDatum) - vandaag) / (1000 * 60 * 60 * 24);
@@ -172,6 +189,7 @@
       return { label: "✅ Oké", kleur: "green" };
     }
 
+    // JSON laden met cache-bypass
     fetch('data.json?nocache=' + Date.now())
       .then(r => r.json())
       .then(data => {
@@ -183,7 +201,7 @@
         function renderReparaties(filter = '') {
           repBody.innerHTML = '';
           reparaties.filter(r => r.omschrijving.toLowerCase().includes(filter.toLowerCase()))
-            .forEach((f, i) => {
+            .forEach(f => {
               const row = document.createElement('tr');
               row.style.cursor = 'pointer';
               row.innerHTML = `<td>${f.factuurdatum}</td><td>${f.garage}</td><td>€ ${f.totaal.toFixed(2)}</td>`;
@@ -208,6 +226,7 @@
         renderReparaties();
         document.getElementById('searchInput').addEventListener('input', e => renderReparaties(e.target.value));
 
+        // Serviceboekje
         const servBody = document.querySelector('#service tbody');
         const servFilter = document.getElementById('serviceFilter');
         function renderService() {
