--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       --hover-bg: #f5f9ff;
       --wrenchly-green: #18ff83;
     }
-
     @media (prefers-color-scheme: dark) {
       :root {
         --bg-color: #1c1c1e;
@@ -25,7 +24,6 @@
         --hover-bg: #383838;
       }
     }
-
     body {
       font-family: system-ui, sans-serif;
       margin: 1.5rem;
@@ -33,11 +31,7 @@
       color: var(--text-color);
       transition: background 0.3s ease, color 0.3s ease;
     }
-
-    h1 {
-      margin-bottom: 1rem;
-    }
-
+    h1 { margin-bottom: 1rem; }
     table {
       width: 100%;
       border-collapse: collapse;
@@ -47,23 +41,14 @@
       border-radius: 8px;
       overflow: hidden;
     }
-
     th, td {
       border-bottom: 1px solid var(--border-color);
       padding: 0.6rem;
       text-align: left;
       vertical-align: top;
     }
-
-    th {
-      background: var(--header-bg);
-      font-weight: 600;
-    }
-
-    tr:hover {
-      background-color: var(--hover-bg);
-    }
-
+    th { background: var(--header-bg); font-weight: 600; }
+    tr:hover { background-color: var(--hover-bg); }
     .tab-button {
       margin-right: 1rem;
       padding: 0.45rem 1rem;
@@ -74,12 +59,10 @@
       transition: all 0.2s ease;
       color: var(--text-color);
     }
-
     .tab-button:hover {
       border-color: var(--wrenchly-green);
       box-shadow: 0 0 6px rgba(24, 255, 131, 0.3);
     }
-
     .tab-button.active {
       background-color: var(--wrenchly-green) !important;
       color: #000 !important;
@@ -87,11 +70,7 @@
       border-color: var(--wrenchly-green) !important;
       box-shadow: 0 0 10px rgba(24, 255, 131, 0.6);
     }
-
-    .search-box {
-      margin: 0.8rem 0;
-    }
-
+    .search-box { margin: 0.8rem 0; }
     .search-box input {
       padding: 0.4rem 0.6rem;
       width: 250px;
@@ -101,11 +80,15 @@
       background-color: var(--table-bg);
       color: var(--text-color);
     }
-
     .status.green { color: #4caf50; font-weight: bold; }
     .status.orange { color: #ff9800; font-weight: bold; }
     .status.red { color: #f44336; font-weight: bold; }
-
+    .totaalbedrag, .service-totaal, .aanstaand-totaal {
+      margin-top: 0.75rem;
+      font-weight: 700;
+      text-align: right;
+    }
+    .subtle { opacity: .8; font-weight: 500; text-align:right; }
     @media (max-width: 600px) {
       table, th, td { font-size: 0.85rem; }
       .tab-button { margin-bottom: 0.5rem; display: inline-block; }
@@ -115,26 +98,23 @@
 <body>
   <h1>Auto-onderhoud overzicht</h1>
 
-  <!-- Tabs -->
   <div>
     <button class="tab-button active" data-tab="reparaties">Reparaties</button>
     <button class="tab-button" data-tab="service">Serviceboekje</button>
     <button class="tab-button" data-tab="aanstaand">Aanstaand onderhoud</button>
   </div>
 
-  <!-- Zoekfunctie -->
   <div class="search-box" id="searchContainer">
     <label for="searchInput">Zoeken in reparaties:</label>
     <input type="text" id="searchInput" placeholder="Bijv. airco, remmen, banden..." />
   </div>
 
-  <!-- Reparaties -->
   <table id="reparaties">
     <thead><tr><th>Datum</th><th>Garage</th><th>Totaalbedrag</th></tr></thead>
     <tbody></tbody>
   </table>
+  <div class="totaalbedrag" id="totaalBedrag"></div>
 
-  <!-- Serviceboekje -->
   <div id="serviceContainer" style="display:none;">
     <label for="serviceFilter">Filter servicebeurten:</label>
     <select id="serviceFilter">
@@ -156,9 +136,10 @@
       </thead>
       <tbody></tbody>
     </table>
+    <div class="service-totaal" id="serviceTotaal"></div>
+    <div class="subtle">(Schattingen o.b.v. type beurt; echte bedragen kunnen afwijken.)</div>
   </div>
 
-  <!-- Aanstaand onderhoud -->
   <div id="aanstaandContainer" style="display:none;">
     <table id="aanstaand">
       <thead>
@@ -167,11 +148,14 @@
           <th>Onderdeel</th>
           <th>Reden</th>
           <th>Verwacht bij km-stand</th>
+          <th>Geschatte kosten</th>
           <th>Status</th>
         </tr>
       </thead>
       <tbody></tbody>
     </table>
+    <div class="aanstaand-totaal" id="aanstaandTotaal"></div>
+    <div class="subtle">(Schattingen o.b.v. gemiddeld onderhoud; voorzichtige raming komende 12 maanden)</div>
   </div>
 
   <script>
@@ -180,6 +164,9 @@
     const serviceContainer = document.getElementById('serviceContainer');
     const aanstaandContainer = document.getElementById('aanstaandContainer');
     const searchContainer = document.getElementById('searchContainer');
+    const totaalDiv = document.getElementById('totaalBedrag');
+    const serviceTotaalDiv = document.getElementById('serviceTotaal');
+    const aanstaandTotaalDiv = document.getElementById('aanstaandTotaal');
 
     tabs.forEach(tab => {
       tab.addEventListener('click', () => {
@@ -187,20 +174,39 @@
         tab.classList.add('active');
         reparatiesTable.style.display = serviceContainer.style.display = aanstaandContainer.style.display = 'none';
         searchContainer.style.display = 'none';
-        if (tab.dataset.tab === 'reparaties') { reparatiesTable.style.display = ''; searchContainer.style.display = ''; }
-        if (tab.dataset.tab === 'service') serviceContainer.style.display = '';
-        if (tab.dataset.tab === 'aanstaand') aanstaandContainer.style.display = '';
+        totaalDiv.style.display = serviceTotaalDiv.style.display = aanstaandTotaalDiv.style.display = 'none';
+        if (tab.dataset.tab === 'reparaties') {
+          reparatiesTable.style.display = '';
+          searchContainer.style.display = '';
+          totaalDiv.style.display = '';
+        }
+        if (tab.dataset.tab === 'service') {
+          serviceContainer.style.display = '';
+          serviceTotaalDiv.style.display = '';
+        }
+        if (tab.dataset.tab === 'aanstaand') {
+          aanstaandContainer.style.display = '';
+          aanstaandTotaalDiv.style.display = '';
+        }
       });
     });
 
+    function formatDate(dateStr) {
+      const d = new Date(dateStr);
+      if (isNaN(d)) return dateStr;
+      return `${String(d.getDate()).padStart(2,'0')}/${String(d.getMonth()+1).padStart(2,'0')}/${d.getFullYear()}`;
+    }
+    function formatCurrency(num) {
+      return Number(num || 0).toLocaleString('nl-NL', { style: 'currency', currency: 'EUR' });
+    }
     function bepaalStatus(beurtDatum, beurtKm, huidigeKm) {
       const vandaag = new Date();
       const datumVerschil = (new Date(beurtDatum) - vandaag) / (1000*60*60*24);
       const kmVerschil = beurtKm - huidigeKm;
-      if (datumVerschil < 0 && beurtKm <= huidigeKm) return { label: "✅ Uitgevoerd", kleur: "green" };
-      if (datumVerschil < 60 || kmVerschil < 5000) return { label: "⏳ Binnenkort", kleur: "orange" };
-      if (datumVerschil < 0 && beurtKm > huidigeKm) return { label: "⚠️ Te laat", kleur: "red" };
-      return { label: "✅ Oké", kleur: "green" };
+      if (datumVerschil < 0 && beurtKm <= huidigeKm) return { label:"✅ Uitgevoerd", kleur:"green" };
+      if (datumVerschil < 60 || kmVerschil < 5000) return { label:"⏳ Binnenkort", kleur:"orange" };
+      if (datumVerschil < 0 && beurtKm > huidigeKm) return { label:"⚠️ Te laat", kleur:"red" };
+      return { label:"✅ Oké", kleur:"green" };
     }
 
     fetch('data.json?nocache=' + Date.now())
@@ -210,67 +216,87 @@
         const reparaties = data.bonnen || [];
         const serviceData = data.service || [];
 
-        // 🔹 Reparaties
+        // Reparaties
         const repBody = document.querySelector('#reparaties tbody');
         function renderReparaties(filter='') {
           repBody.innerHTML = '';
-          reparaties.filter(r => r.omschrijving.toLowerCase().includes(filter.toLowerCase()))
+          let totaal = 0;
+          reparaties
+            .filter(r => (r.omschrijving||'').toLowerCase().includes(filter.toLowerCase()))
             .forEach(f => {
+              totaal += f.totaal || 0;
               const row = document.createElement('tr');
-              row.style.cursor = 'pointer';
-              row.innerHTML = `<td>${f.factuurdatum}</td><td>${f.garage}</td><td>€ ${f.totaal.toFixed(2)}</td>`;
+              row.innerHTML = `<td>${formatDate(f.factuurdatum)}</td><td>${f.garage}</td><td>${formatCurrency(f.totaal)}</td>`;
               repBody.appendChild(row);
-              const details = [`Factuurnummer: ${f.factuurnummer}`, `Kilometerstand: ${f.kilometerstand}`,
-                `Omschrijving: ${f.omschrijving}`, `Categorie: ${f.categorie}`];
-              details.forEach(d => {
-                const r = document.createElement('tr'); r.style.display='none';
-                r.innerHTML = `<td colspan="3" style="padding-left:1.5rem;">${d}</td>`;
-                repBody.appendChild(r);
-                row.addEventListener('click', ()=>{r.style.display=r.style.display==='none'?'table-row':'none';});
-              });
             });
+          totaalDiv.textContent = `Totaal uitgegeven aan reparaties: ${formatCurrency(totaal)}`;
         }
         renderReparaties();
-        document.getElementById('searchInput').addEventListener('input', e=>renderReparaties(e.target.value));
+        document.getElementById('searchInput').addEventListener('input', e => renderReparaties(e.target.value));
 
-        // 🔹 Serviceboekje
-        const servBody=document.querySelector('#service tbody');
-        const servFilter=document.getElementById('serviceFilter');
+        // Serviceboekje
+        const servBody = document.querySelector('#service tbody');
+        const servFilter = document.getElementById('serviceFilter');
+        function estimateServiceCost(b){
+          const txt = `${b.type_beurt||''} ${b.soort_onderhoud||''}`.toLowerCase();
+          let est = 0;
+          if (txt.includes('grote')) est += 600;
+          else if (txt.includes('kleine')) est += 300;
+          if (txt.includes('apk')) est += 65;
+          if (txt.includes('airco')) est += 120;
+          if (txt.includes('distributieriem')) est += 900;
+          if (txt.includes('rem') && txt.includes('vervang')) est += 300;
+          return est;
+        }
         function renderService(){
           servBody.innerHTML='';
-          const filter=servFilter.value;
-          const vandaag=new Date();
+          const filter = servFilter.value;
+          const vandaag = new Date();
+          let totaalSchatting=0;
           serviceData.forEach(b=>{
             const d=new Date(b.datum);
-            const isHist=d<vandaag; const isToek=d>vandaag;
+            const isHist=d<vandaag;
+            const isToek=d>vandaag;
             if(filter==='historisch'&&!isHist)return;
             if(filter==='toekomstig'&&!isToek)return;
             const s=bepaalStatus(b.datum,b.kilometerstand,huidigeKm);
+            const schatting=estimateServiceCost(b);
+            totaalSchatting+=schatting;
             const row=document.createElement('tr');
-            row.innerHTML=`<td>${b.datum}</td><td>${b.garage}</td><td>${b.type_beurt}</td>
-              <td>${b.soort_onderhoud}</td><td>${b.kilometerstand.toLocaleString()} km</td>
-              <td>${b.volgende_interval}</td><td class="status ${s.kleur}">${s.label}</td>`;
+            row.innerHTML=`
+              <td>${formatDate(b.datum)}</td><td>${b.garage}</td>
+              <td>${b.type_beurt}</td><td>${b.soort_onderhoud}</td>
+              <td>${b.kilometerstand.toLocaleString()} km</td>
+              <td>${b.volgende_interval}</td>
+              <td class="status ${s.kleur}">${s.label}</td>`;
             servBody.appendChild(row);
           });
+          serviceTotaalDiv.textContent=`Geschatte totale kosten (zichtbare beurten): ${formatCurrency(totaalSchatting)}`;
         }
         servFilter.addEventListener('change',renderService);
         renderService();
 
-        // 🔹 Aanstaand onderhoud
+        // Aanstaand onderhoud
         const aanBody=document.querySelector('#aanstaand tbody');
         const voorspellingen=[
-          {datum:'2025-06-01',onderdeel:'Olie + filters',reden:'20.000 km sinds laatste beurt (2024-05-31)',km:366000,status:'orange',label:'⚠️ Binnenkort'},
-          {datum:'2025-12-10',onderdeel:'APK',reden:'Jaarlijkse keuring',km:378000,status:'orange',label:'⏳ Inplannen'},
-          {datum:'2027-06-01',onderdeel:'Distributieriem',reden:'5 jaar na vervanging (2022)',km:406000,status:'red',label:'⚠️ Kritisch'},
-          {datum:'2025-07-01',onderdeel:'Airco onderhoud',reden:'Jaarlijks interval',km:368000,status:'orange',label:'⏳ Binnenkort'}
+          {datum:'2025-06-01',onderdeel:'Olie + filters',reden:'20.000 km sinds laatste beurt (31/05/2024)',km:366000,kosten:250,status:'orange',label:'⚠️ Binnenkort'},
+          {datum:'2025-12-10',onderdeel:'APK',reden:'Jaarlijkse keuring',km:378000,kosten:65,status:'orange',label:'⏳ Inplannen'},
+          {datum:'2027-06-01',onderdeel:'Distributieriem',reden:'5 jaar na vervanging (2022)',km:406000,kosten:900,status:'red',label:'⚠️ Kritisch'},
+          {datum:'2025-07-01',onderdeel:'Airco onderhoud',reden:'Jaarlijks interval',km:368000,kosten:120,status:'orange',label:'⏳ Binnenkort'}
         ];
         aanBody.innerHTML='';
+        let totaalAanstaand=0;
         voorspellingen.forEach(v=>{
+          if(new Date(v.datum)<new Date().setFullYear(new Date().getFullYear()+1)){
+            totaalAanstaand+=v.kosten;
+          }
           const row=document.createElement('tr');
-          row.innerHTML=`<td>${v.datum}</td><td>${v.onderdeel}</td><td>${v.reden}</td>
-                         <td>${v.km.toLocaleString()} km</td><td class="status ${v.status}">${v.label}</td>`;
+          row.innerHTML=`<td>${formatDate(v.datum)}</td><td>${v.onderdeel}</td><td>${v.reden}</td>
+                         <td>${v.km.toLocaleString()} km</td><td>${formatCurrency(v.kosten)}</td>
+                         <td class="status ${v.status}">${v.label}</td>`;
           aanBody.appendChild(row);
         });
+        aanstaandTotaalDiv.textContent=`Geschatte kosten komende 12 maanden: ${formatCurrency(totaalAanstaand)}`;
       })
       .catch(e=>console.error('Fout bij laden JSON:',e));
   </script>
